--- a/LevelUp.API/appsettings.json
+++ b/LevelUp.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;User Id=sa;Password=Sqlserver123!;Encrypt=false;TrustServerCertificate=true;" 
+  }
 }
