--- a/LevelUp.API/appsettings.json
+++ b/LevelUp.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=LevelUpDb;User Id=sa;Password=Sqlserver123!;Encrypt=false;TrustServerCertificate=true;" 
+    "DefaultConnection": "Data Source=IMAMZUHDIM;Database=LevelUpDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" 
   },
   "EmailSettings": {
     "SmtpServer": "localhost",
